DATE       AUTHOR   CHANGE
---------- -------- -----------------------------------------------------------
2007-05-23 patrick  Cleaned up internal handling of vpr::Interval objects in
                    read/write methods of I/O classes. The public read/write
                    methods in vpr::BlockIO now take vpr::Interval objectcs by
                    const reference.
                    NEW VERSION: 1.1.45
2007-04-05 patrick  Added thread start/exit notification signals. Boost.Signals
                    is now a required dependency.
                    NEW VERSION: 1.1.44
2007-03-03 patrick  Allow callers of vpr::InetAddr::getAllLocalAddrs() to
                    indicate whether interfaces in the down state should be
                    considered.
                    NEW VERSION: 1.1.43
2007-03-02 patrick  Changed the signature of the read, write, and query methods
                    on I/O classes (vpr::BlockIO, vpr::Socket,
                    vpr::SocketStream, vpr::SocketDatagram, and
                    vpr::SerialPort) to return the result "out the back"
                    instead of through a by-reference parameter.
                    NEW VERSION: 1.1.42
2007-02-13 patrick  Use the Win32 thread and sychronization APIs directly
                    instead of using NSPR.
                    NEW VERSION: 1.1.41
2007-02-13 patrick  Reimplemented vpr::CondVarWin32 using a simpler approach.
                    NEW VERSION: 1.1.40
2007-01-30 patrick  Eliminated the need to set VPR_BASE_DIR on Windows to run
                    applications.
                    NEW VERSION: 1.1.39
2006-12-13 patrick  Replaced integer return codes in vpr::Thread with
                    exceptions.
                    NEW VERSION: 1.1.38
2006-12-11 patrick  Replaced integer return codes in vpr::ThreadKey with
                    exceptions.
                    NEW VERSION: 1.1.37
2006-12-08 patrick  Added Windows-specific threading wrappers and