@@ -68,7 +68,7 @@ namespace vpr
       typedef class SocketImplSIM           SocketImpl;
       typedef class SocketDatagramImplSIM   SocketDatagramImpl;
       typedef class SocketStreamImplSIM     SocketStreamImpl;
-      typedef class IOStatsStrategyAdapter<class BaseIOStatsStrategy, class BandwidthIOStatsStrategy>     SocketIOStatsStrategy;
+      typedef class NullIOStatsStrategy     SocketIOStatsStrategy;
    };
 
    typedef class InetAddrSIM InetAddr;
@@ -100,16 +100,7 @@ namespace vpr
       typedef class SocketImplNSPR           SocketImpl;
       typedef class SocketDatagramImplNSPR   SocketDatagramImpl;
       typedef class SocketStreamImplNSPR     SocketStreamImpl;
-
-#ifdef __SUNPRO_CC
-      class BaseIOStatsStrategy;
-      class BandwidthIOStatsStrategy;
-      class IOStatsStrategyAdapter<class T1, class T2>;
-
-      typedef IOStatsStrategyAdapter<BaseIOStatsStrategy, BandwidthIOStatsStrategy> SocketIOStatsStrategy;
-#else
-      typedef class IOStatsStrategyAdapter<class BaseIOStatsStrategy, class BandwidthIOStatsStrategy>     SocketIOStatsStrategy;
-#endif
+      typedef class NullIOStatsStrategy      SocketIOStatsStrategy;
    };
 
    typedef class InetAddrNSPR InetAddr;
@@ -142,7 +133,7 @@ namespace vpr
       typedef class SocketImplBSD           SocketImpl;
       typedef class SocketDatagramImplBSD   SocketDatagramImpl;
       typedef class SocketStreamImplBSD     SocketStreamImpl;
-      typedef IOStatsStrategyAdapter<class BaseIOStatsStrategy, class BandwidthIOStatsStrategy>     SocketIOStatsStrategy;
+      typedef class NullIOStatsStrategy     SocketIOStatsStrategy;
    };
 
    typedef class InetAddrBSD    InetAddr;
